// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingKibana is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingKibana euiLoadingKibana--medium testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiLoadingKibana__icon"
  >
    <svg
      class="euiIcon euiIcon--medium"
      focusable="false"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M4 0v28.789L28.935.017z"
          fill="#F04E98"
        />
        <path
          class="euiIcon__fillNegative"
          d="M4 12v16.789l11.906-13.738A24.721 24.721 0 0 0 4 12"
        />
        <path
          d="M18.479 16.664L6.268 30.754l-1.073 1.237h23.191c-1.252-6.292-4.883-11.719-9.908-15.327"
          fill="#00BFB3"
        />
      </g>
    </svg>
  </span>
</span>
`;

exports[`EuiLoadingKibana size l is rendered 1`] = `
<span
  class="euiLoadingKibana euiLoadingKibana--large"
>
  <span
    class="euiLoadingKibana__icon"
  >
    <svg
      class="euiIcon euiIcon--large"
      focusable="false"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M4 0v28.789L28.935.017z"
          fill="#F04E98"
        />
        <path
          class="euiIcon__fillNegative"
          d="M4 12v16.789l11.906-13.738A24.721 24.721 0 0 0 4 12"
        />
        <path
          d="M18.479 16.664L6.268 30.754l-1.073 1.237h23.191c-1.252-6.292-4.883-11.719-9.908-15.327"
          fill="#00BFB3"
        />
      </g>
    </svg>
  </span>
</span>
`;

exports[`EuiLoadingKibana size m is rendered 1`] = `
<span
  class="euiLoadingKibana euiLoadingKibana--medium"
>
  <span
    class="euiLoadingKibana__icon"
  >
    <svg
      class="euiIcon euiIcon--medium"
      focusable="false"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M4 0v28.789L28.935.017z"
          fill="#F04E98"
        />
        <path
          class="euiIcon__fillNegative"
          d="M4 12v16.789l11.906-13.738A24.721 24.721 0 0 0 4 12"
        />
        <path
          d="M18.479 16.664L6.268 30.754l-1.073 1.237h23.191c-1.252-6.292-4.883-11.719-9.908-15.327"
          fill="#00BFB3"
        />
      </g>
    </svg>
  </span>
</span>
`;

exports[`EuiLoadingKibana size xl is rendered 1`] = `
<span
  class="euiLoadingKibana euiLoadingKibana--xLarge"
>
  <span
    class="euiLoadingKibana__icon"
  >
    <svg
      class="euiIcon euiIcon--xLarge"
      focusable="false"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M4 0v28.789L28.935.017z"
          fill="#F04E98"
        />
        <path
          class="euiIcon__fillNegative"
          d="M4 12v16.789l11.906-13.738A24.721 24.721 0 0 0 4 12"
        />
        <path
          d="M18.479 16.664L6.268 30.754l-1.073 1.237h23.191c-1.252-6.292-4.883-11.719-9.908-15.327"
          fill="#00BFB3"
        />
      </g>
    </svg>
  </span>
</span>
`;
